Added paragraph to index.html

--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <html>
   <body>
     <h1>Hello world, I am 2656236</h1>
+    <p>This is Lab 1 for COMS3003A - Software Design</p>
   </body>
 </html>
