--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <body>
     <h1>Hello world, I am 2656236</h1>
     <p>This is Lab 1 for COMS3003A - Software Design.</p>
-    <p>For more on this Lab, see my GitHub repository</p>
-    <a href="https://github.com/Jayden-Harold/2656236_SoftwareDesign">here</a>
+    <p>For more on this Lab, see my GitHub repository <a href="https://github.com/Jayden-Harold/2656236_SoftwareDesign">here</a> </p>
   </body>
 </html>
