--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
     <h1>Hello world, I am 2656236</h1>
     <p>This is Lab 1 for COMS3003A - Software Design.</p>
     <p>For more on this Lab, see my GitHub repository <a href="https://github.com/Jayden-Harold/2656236_SoftwareDesign">here</a> </p>
+    <h1>Lab 2</h1>
+    <p>For the lab 2 site click <a href="2656236-lab2.html">here</a></p>
   </body>
 </html>
