--- a/2656236-lab2.html
+++ b/2656236-lab2.html
@@ -8,7 +8,7 @@
 <header><h1>Welcome to Jayden's Portfolio</h1></header>
 <nav id="main-navigation">
     <ul>
-        <li><a href="#">Home/a></li>
+        <li><a href="#">Home></li>
         <li><a href="#">Projects</a></li>
         <li><a href="#">Contact</a></li>
     </ul>
